@@ -139,7 +139,7 @@ CONFIG_STM32_JTAG_SW_ENABLE=n
 # CONFIG_HEAP2_BASE - The base address of the SRAM in the FSMC address space
 # CONFIG_HEAP2_END - The end (+1) of the SRAM in the FSMC address space
 #
-CONFIG_STM32_FSMC_SRAM=y
+CONFIG_STM32_FSMC_SRAM=n
 CONFIG_HEAP2_BASE=0x64000000
 CONFIG_HEAP2_END=(0x64000000+(2*1024*1024))
   
@@ -512,6 +512,7 @@ CONFIG_HAVE_LIBM=n
 #  the worker thread.  Default: 4
 # CONFIG_SCHED_WAITPID - Enable the waitpid() API
 # CONFIG_SCHED_ATEXIT - Enabled the atexit() API
+# CONFIG_SCHED_ONEXIT - Enabled the atexit() API
 #
 #CONFIG_APPS_DIR=
 CONFIG_DEBUG=n
@@ -531,7 +532,7 @@ CONFIG_DEBUG_INPUT=n
 
 CONFIG_HAVE_CXX=y
 CONFIG_HAVE_CXXINITIALIZE=y
-CONFIG_MM_REGIONS=3
+CONFIG_MM_REGIONS=2
 CONFIG_ARCH_LOWPUTC=y
 CONFIG_RR_INTERVAL=200
 CONFIG_SCHED_INSTRUMENTATION=n
@@ -557,6 +558,7 @@ CONFIG_SCHED_WORKSTACKSIZE=2048
 CONFIG_SIG_SIGWORK=4
 CONFIG_SCHED_WAITPID=y
 CONFIG_SCHED_ATEXIT=n
+CONFIG_SCHED_ONEXIT=y
 
 #
 # System Logging
@@ -950,7 +952,7 @@ CONFIG_RTC_ALARM=n
 #
 # Input device configuration
 #
-CONFIG_INPUT=n
+CONFIG_INPUT=y
 CONFIG_INPUT_TSC2007=n
 
 #
@@ -998,7 +1000,7 @@ CONFIG_INPUT_TSC2007=n
 #   for example, if your display is 320x240, then THRESHX=13 and THRESHY=17
 #   would correspond to one pixel.  Default: 12
 #
-CONFIG_INPUT_STMPE11=n
+CONFIG_INPUT_STMPE11=y
 CONFIG_STMPE11_SPI=n
 CONFIG_STMPE11_I2C=y
 CONFIG_STMPE11_MULTIPLE=y
@@ -1713,7 +1715,7 @@ CONFIG_EXAMPLES_NXLINES_EXTERNINIT=n
 #   collected and the program terminates.  Default:  Samples are collected
 #   indefinitely.
 #
-CONFIG_EXAMPLES_TOUCHSCREEN_BUILTIN=y
+CONFIG_EXAMPLES_TOUCHSCREEN_BUILTIN=n
 CONFIG_EXAMPLES_TOUCHSCREEN_MINOR=0
 CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH="/dev/input0"
 CONFIG_EXAMPLES_TOUCHSCREEN_NSAMPLES=25
